# Dependency-Obituary

./: .env.example  .gitignore  .gitleaks.toml  .zap-rules.tsv  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_DESIGN.md  action.yml  next.config.js  package-lock.json  package.json  scorer.ts  vercel.json
.github/workflows/: ci.yml  dast.yml  dependency-health.yml
app/: NavBar.tsx  OnboardingStepper.tsx  layout.tsx  page.tsx  providers.tsx
app/api/activity/: route.ts
app/api/analyze/: route.ts
app/api/badge/: route.ts
app/api/bot-settings/: route.ts
app/api/cache/: route.ts
app/api/cron/refresh-popular/: route.ts
app/api/github/webhook/: route.ts
app/api/share/: route.ts
app/api/watchlist/: route.ts
app/badge/: page.tsx
app/dashboard/: page.tsx
app/integrations/: page.tsx
app/integrations/settings/: page.tsx
app/privacy/: page.tsx
app/results/: ResultsDashboard.tsx
app/share/: page.tsx
app/terms/: page.tsx
data/: popular-packages.json
examples/: .depobituaryignore  Cargo.toml  Gemfile  build.gradle  composer.json  go.mod  package.json  pubspec.yaml  requirements.txt  vcpkg.json
lib/: auth.ts  cache.ts  fetcher.ts  github-app.ts  github.ts  npm.ts  parser.ts  scorer.ts
lib/__tests__/: cache.test.ts  parser.test.ts  scorer.test.ts
lib/__tests__/integration/: api.integration.test.ts
types/: index.ts
