[package]
name = "example-project"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
